# xdma-test

./: .clang-format  CMakeLists.txt  README.md  example.dmap  lfsr_test.map  my_device.map  xdma-test.cpp
inc/: AxiDmaIf.hpp  AxiTrafficGenLfsr.hpp  CtkRegWrapper.hpp  FpgaMemBuffer.hpp  GpioStatus.hpp  MemSgdma.hpp  TrafficGen.hpp
src/: AxiDmaIf.cpp  MemSgdma.cpp  TrafficGen.cpp  xdma-test.cpp
